--- a/worknet-frontend/.gitignore
+++ b/worknet-frontend/.gitignore
@@ -20,6 +20,9 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+# VISUAL STUDIO
+.vs/
+
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
