--- a/worknet-backend/Worknet.API/appsettings.json
+++ b/worknet-backend/Worknet.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WorknetDatabase": "set in user secrets"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
