--- a/worknet-backend/Worknet.Shared/Worknet.Shared.csproj
+++ b/worknet-backend/Worknet.Shared/Worknet.Shared.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Helpers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
+  </ItemGroup>
+
 </Project>
