Add Jwt Auth, Add Configs, add Utils, add logic for adding users to DB

--- a/worknet-backend/Worknet.API/appsettings.json
+++ b/worknet-backend/Worknet.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "WorknetDatabase": "set in user secrets"
   },
+  "Jwt": {
+    "Key": "set in user secrets", // Min 32 symbols
+    "Issuer": "set in user secrets",
+    "Audience": "set in user secrets"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
