--- a/worknet-backend/Worknet.Shared/Worknet.Shared.csproj
+++ b/worknet-backend/Worknet.Shared/Worknet.Shared.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Constants\" />
-    <Folder Include="Helpers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
