--- a/worknet-backend/Worknet.Shared/Worknet.Shared.csproj
+++ b/worknet-backend/Worknet.Shared/Worknet.Shared.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Constants\" />
+    <Folder Include="Models\Responce\" />
   </ItemGroup>
 
   <ItemGroup>
