Implement the whole logic for saving file and add GoogleDriveClient to Infra layer, update configs, update services and gitignore

--- a/worknet-backend/.gitignore
+++ b/worknet-backend/.gitignore
@@ -35,6 +35,7 @@ TestResult.xml
 [Rr]eleasePS/
 dlldata.c
 
+**/App_Data/
 *_i.c
 *_p.c
 *_i.h
@@ -148,6 +149,7 @@ csx/
 AppPackages/
 
 # Others
+App_Data/*
 sql/
 *.Cache
 ClientBin/
