--- a/worknet-backend/Worknet.API/appsettings.json
+++ b/worknet-backend/Worknet.API/appsettings.json
@@ -7,6 +7,10 @@
     "Issuer": "set in user secrets",
     "Audience": "set in user secrets"
   },
+  "GoogleDrive": {
+    "FolderId": "set in user secrets",
+    "JsonName": "set in user secrets" // example.json
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
