--- a/worknet-backend/Worknet.Infrastructure/Worknet.Infrastructure.csproj
+++ b/worknet-backend/Worknet.Infrastructure/Worknet.Infrastructure.csproj
@@ -7,8 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.69.0.3783" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Worknet.Core\Worknet.Core.csproj" />
+    <ProjectReference Include="..\Worknet.Shared\Worknet.Shared.csproj" />
   </ItemGroup>
 
 </Project>
