--- a/worknet-backend/Worknet.API/Worknet.API.csproj
+++ b/worknet-backend/Worknet.API/Worknet.API.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="App_Data\drive-key.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="App_Data\drive-key.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
@@ -23,6 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Worknet.BLL\Worknet.BLL.csproj" />
     <ProjectReference Include="..\Worknet.Database\Worknet.DAL.csproj" />
+    <ProjectReference Include="..\Worknet.Infrastructure\Worknet.Infrastructure.csproj" />
     <ProjectReference Include="..\Worknet.Shared\Worknet.Shared.csproj" />
   </ItemGroup>
 
